# jarvis

./: .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE.bazel  crate_rust_setup.sh  defs.bzl  linker.ld  x86_64-jarvis.json
.cargo/: config.toml
asm/: Cargo.toml
asm/src/: lib.rs
asm/src/x86_64/: mod.rs
asm/src/x86_64/registers/: mod.rs
boot/: Cargo.toml
boot/src/: main.rs
boot/src/long_mode/: mod.rs
boot/src/multiboot_header/: mod.rs  multiboot-header.S  multiboot_header.S
boot/src/stack/: mod.rs  reservation.S
boot/src/stage/: mod.rs  stage1.S
boot/src/stage/x86_64/: stage1.S  stage2.S
bootloader/: Cargo.toml  README.md  build.rs
bootloader/src/: main.rs
bootloader/src/x86_64/grub/: grub.cfg
buildenv/: README.md  jarvis-build-env
kbin/: BUILD.bazel  Cargo.toml  LICENSE  README.md  linker.ld  repository.bzl  rust.bzl  rustc.bzl  toolchain.bzl  workspace.bzl  x86_64-jarvis.json
kbin/.cargo/: config.toml
kbin/asm/: BUILD.bazel  defs.bzl
kbin/asm/src/: lib.rs
kbin/boot/: BUILD.bazel  defs.bzl
kbin/boot/src/multiboot_header/: mod.rs  multiboot_header.S
kbin/boot/src/stage/x86_64/: check_system.S  stage1.S  stage2.S
kbin/kernel/: BUILD.bazel  defs.bzl
kbin/private/: BUILD.bazel  dummy_utils.bzl  helpers.bzl  toolchains.bzl  version.bzl
kbin/private/template/: BUILD.bazel  _BUILD_COMPILER_BUILTINS  _BUILD_CORE  _BUILD_CORE_ARCH
kbuild/: BUILD.bazel  Cargo.toml  README.md  defs.bzl  workspace.bzl
kbuild/.cargo/: config.toml
kbuild/src/: lib.rs
kbuild/src/cli/: mod.rs
kbuild/src/command/: build.rs  configure.rs  error.rs  mod.rs  runner.rs
kbuild/src/config/: mod.rs
kenv/: README.md  jarvis-build-env
kernel/: Cargo.toml
kernel/src/: lib.rs
