[package]
name = "boot"
version = "0.1.0"
authors = ["dual-lab@yandex.com"]
edition = "2018"
repository = "https://github.com/dual-lab/jarvis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel-jarvis-x86_64"
path = "src/main.rs"    
test = false            
doctest = false       
bench = false  

[dependencies]

kernel = { path = "../kernel"}
