load(":toolchain.bzl", "declare_jarvis_toolchain")

declare_jarvis_toolchain()

exports_files(
    [
        "linker.ld",
        "x86_64-jarvis.json",
    ],
    ["//kbin:__subpackages__"],
)

package_group(
    name = "core",
    packages = [
        "//kbin/asm",
        "//kbin/boot",
        "//kbin/kernel",
    ],
)

platform(
    name = "jarvis",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:none",
    ],
)
