load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load(":defs.bzl", "lib_deps", "bin_deps")

rust_library(
    name = "kbuild_lib",
    crate_name = "kbuild",
    srcs = glob(include = ["src/**/*.rs"], exclude = ["src/bin/*.rs"]),
    deps = lib_deps(),
    rustc_env_files = ["//:generate_rust_env_file"],
    )

rust_binary(
    name = "kbuild",
    srcs = ["src/bin/cargo-kbuild.rs"],
    deps = bin_deps(), 
    rustc_env_files = ["//:generate_rust_env_file"],
    )
