[package]
name = "kbuild"
version = "0.1.0"
authors = ["dual-lab@yandex.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.8.3"
exitcode = "1.1.2"
