load("@rules_rust//rust:rust.bzl", "rust_binary")
load(":defs.bzl", "deps")

rust_binary(
    name = "boot",
    srcs = glob(["src/**/*.rs"]),
    compile_data = [":asm_sources"],
    crate_root = "src/main.rs",
    edition = "2018",
    linker_script = "//kbin:linker.ld",
    rustc_env_files = ["//:generate_rust_env_file"],
    target_compatible_with = ["@platforms//os:none"],
    deps = deps,
)

filegroup(
    name = "asm_sources",
    srcs = glob([
        "src/stage/x86_64/*.S",
        "src/multiboot_header/multiboot_header.S",
    ]),
)
